# opsbot

./: .env.example  .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_drop_conversation_history.py
backend/src/opsbot/agent/: engine.py  llm.py  memory.py  router.py
backend/src/opsbot/agent/prompts/: rca.py  sre.py  system.py
backend/src/opsbot/api/: main.py
backend/src/opsbot/api/routes/: approvals.py  auth.py  health.py  slack.py  sre.py  tasks.py
backend/src/opsbot/config/: settings.py
backend/src/opsbot/integrations/slack/: client.py  formatters.py  handlers.py
backend/src/opsbot/kagent/: __init__.py  approval_watcher.py  client.py  execution.py  schemas.py
backend/src/opsbot/mcp/: client.py  manager.py  servers.py
backend/src/opsbot/models/: db.py  schemas.py
backend/src/opsbot/sre/: fix_generator.py  rca_engine.py  slo_analyzer.py
backend/src/opsbot/tasks/: celery_app.py
backend/src/opsbot/tools/: argocd.py  aws.py  azure.py  bitbucket.py  confluence.py  datadog.py  gcp.py  github.py  gitlab.py  grafana.py  jira.py  kubernetes.py  opensearch.py  opsgenie.py  pagerduty.py  prometheus.py  registry.py  release_manager.py  terraform.py
backend/src/opsbot/workflows/: approval.py  freeze.py  notification.py
backend/tests/: test_approval_workflow.py  test_kagent_client.py  test_llm_client.py  test_mcp_client.py  test_rate_limit.py  test_rbac_engine.py  test_release_manager.py
charts/opsbot/: Chart.yaml  values.yaml
charts/opsbot/templates/: hpa.yaml  (+6 more)
docker/: docker-compose.yml
examples/: 01-quick-start.md  02-slack-setup.md  03-kubernetes.md  04-github.md  05-argocd.md  06-terraform.md  07-approvals-and-rbac.md  08-sre-intelligence.md  09-multi-llm.md  10-mcp-servers.md  11-web-dashboard.md  12-helm-production.md  13-observability.md  14-incident-response.md  15-additional-integrations.md  16-feature-roadmap.md  README.md
frontend/: Dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
mcp-servers/argocd-mcp/: package-lock.json  package.json
mcp-servers/bitbucket-mcp/: package-lock.json  package.json
mcp-servers/confluence-mcp/: package-lock.json  package.json
mcp-servers/datadog-mcp/: package-lock.json  package.json
mcp-servers/gitlab-mcp/: package-lock.json  package.json
mcp-servers/jira-mcp/: package-lock.json  package.json
mcp-servers/opensearch-mcp/: package-lock.json  package.json
(+25 files in other folders)
