[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opsbot"
version = "0.1.0"
description = "Advanced DevOps & SRE Automation Platform"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # LLM
    "litellm>=1.52.0",
    "anthropic>=0.40.0",
    "openai>=1.55.0",

    # MCP
    "mcp>=1.0.0",

    # Slack
    "slack-bolt>=1.21.0",
    "slack-sdk>=3.33.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",

    # Redis / Cache
    "redis[hiredis]>=5.2.0",

    # Task queue
    "celery[redis]>=5.4.0",
    "celery-redbeat>=2.2.0",

    # GitHub
    "PyGithub>=2.5.0",

    # Kubernetes
    "kubernetes>=31.0.0",
    "kubernetes-asyncio>=31.0.0",

    # AWS
    "boto3>=1.35.0",
    "botocore>=1.35.0",

    # GCP
    "google-cloud-container>=2.54.0",
    "google-cloud-artifact-registry>=1.13.0",

    # Azure
    "azure-mgmt-containerservice>=31.0.0",
    "azure-mgmt-containerregistry>=10.3.0",
    "azure-identity>=1.19.0",

    # Observability integrations
    "pdpyras>=5.3.0",
    "datadog-api-client>=2.30.0",
    "prometheus-api-client>=0.5.5",

    # OpenSearch / Elasticsearch
    "opensearch-py[async]>=2.7.0",

    # GitLab
    "python-gitlab>=4.9.0",

    # Atlassian (Jira + Confluence + Bitbucket)
    "atlassian-python-api>=3.41.0",

    # HTTP
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",

    # Utilities
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "arrow>=1.3.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "cryptography>=44.0.0",
    "PyYAML>=6.0.2",
    "jinja2>=3.1.4",
    "pygithub>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML",
    "types-redis",
]

[project.scripts]
opsbot = "opsbot.cli:app"
opsbot-worker = "opsbot.tasks.celery_app:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/opsbot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
